--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pilis-recuperatorio-reyes-aliaga",
+  "name": "recuperatorio-pilis",
   "private": true,
   "version": "0.0.0",
   "type": "module",
